# browser-use-mcp

./: .gitignore  LICENSE  README.md  main.py  package.json  pyproject.toml  run
pipeline/: install
src/: main.py  run_browser_use.py  test.py
