[project]
name = "browser-use-mcp"
version = "0.1.0"
description = "MCP server for automating browser tasks using the browser-use library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "browser-use>=0.1.40",
    "langchain-google-genai>=2.1.1",
    "mcp[cli]>=1.5.0",
    "pillow>=11.1.0",
]
